update items and update scripts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="container"></div>
-    <script src="crypto.js"></script>
+    <script type="module" src="scripts/browser.js"></script>
 </body>
 
 </html>
